
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:id="@+id/ProfileChooserLayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center">

    <Button
        android:id="@+id/profilecheck"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/profile_check"
        android:onClick="profileCheck" />

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/extremeperformance"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/extreme_performance"
        android:onClick="extremePerformance"/>

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/performance"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/performance"
        android:onClick="performance" />

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/defaultprofile"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/default_profile"
        android:onClick="defaultProfile" />

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/battery"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/battery"
        android:onClick="battery" />

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/extremebattery"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/extreme_battery"
        android:onClick="extremeBattery" />

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/gabriel"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/gabriel"
        android:onClick="gabriel" />

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/salvation"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/salvation"
        android:onClick="salvation" />

    <View style="@style/Divider"/>

	<Button
        android:id="@+id/backup"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/backup_profile"
        android:onClick="backup" />

    <View style="@style/Divider"/>

	<Button
        android:id="@+id/restore"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="fill_vertical"
        android:paddingStart="@dimen/size_large"
        android:paddingEnd="@dimen/size_large"
        android:text="@string/restore_profile"
        android:onClick="restore" />

    <View style="@style/Divider"/>
</LinearLayout>
